--- a/src/tumblr_bootstrap.html
+++ b/src/tumblr_bootstrap.html
@@ -28,7 +28,7 @@
     </head>
 <body>
 	<div class="container">
-		<header class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar navbar-inverse navbar-fixed-top">
       
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -45,9 +45,8 @@
             <li><a href="/contacts">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
-      </header>
-	  </div>
-<div class="container">
+      </div>
+
 		<div class="row">
 			<div class=" col-md-4">
 				<div id="avatar"><a href="/"><img src="{PortraitURL-128}" /></a></div>
