--- a/src/tumblr_bootstrap.html
+++ b/src/tumblr_bootstrap.html
@@ -9,6 +9,9 @@
             .container {
 			  padding-top: 60px;
 			}
+			.left-column{
+				border-right: 3px solid #EEEEEE;
+			}
 			.post-item{
 				border-bottom: 3px solid #eee;
 				
@@ -84,7 +87,7 @@
       </div>
 
 		<div class="row">
-			<div class=" col-md-3">
+			<div class="left-column col-md-3">
 				<div id="avatar"><a href="/"><img src="{PortraitURL-128}" /></a></div>
                 <div id="description"><h2>{Description}</h2></div>
 				                {block:Twitter}
