--- a/src/tumblr_bootstrap.html
+++ b/src/tumblr_bootstrap.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="http://cdn.nishadil.com/js/google-code-prettify/prettify.css">
         <style>
-            .container {
+            .right-column {
 			  padding-top: 60px;
 			}
 			.left-column{
@@ -62,7 +62,7 @@
 <body>
 	<div class="container">
 		<div class="navbar navbar-inverse navbar-fixed-top">
-      
+      <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
@@ -84,9 +84,10 @@
             <button type="submit" class="btn btn-success">Search</button>
           </form>
         </div><!--/.nav-collapse -->
+		</div>
       </div>
 
-		<div class="row">
+		<div class="right-column row">
 			<div class="left-column col-md-3">
 				<div id="avatar"><a href="/"><img src="{PortraitURL-128}" /></a></div>
                 <div id="description"><h2>{Description}</h2></div>
