--- a/src/tumblr_bootstrap.html
+++ b/src/tumblr_bootstrap.html
@@ -76,6 +76,8 @@
             <li class=""><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contacts">Contact</a></li>
+			<li><a href="/scala">Scala</a></li>
+			<li><a href="/java">Java</a></li>
           </ul>
 		  <form class="navbar-form navbar-right" action="/search" method="get">
             <div class="form-group">
